[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/models/treeofarmshighpoly001.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemies/tree_of_arms.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.3013, 3.49924, 1 )

[node name="TreeOfArms" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Model" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Rotater" type="Spatial" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_end"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_end"]
